--- a/estilo.css
+++ b/estilo.css
@@ -40,6 +40,7 @@ body{
 	width: 1035px;
 	height: 890px;
 	float: right;
+	border:3px solid green;
 	
 	
 
@@ -50,7 +51,7 @@ body{
 	height:893px;
 	margin-left: 0px;
 	background:#f7b600;
-	
+	border:1px solid red;
 }
 	
 .postagem{	
@@ -59,7 +60,7 @@ body{
 	width: 500px;
 	height:275px;
 	display: inline;
-	border:1px solid orange ;
+	border:3px solid green ;
 }
 
 		
@@ -176,6 +177,9 @@ h4{
 	display: block;
 }
 
+#ficha-tecnica{
+	display: block;
+}
 
 
 .estilo-botao{
@@ -227,4 +231,76 @@ h4{
 	margin-left: 5px;
 }
 
+.imagem-ficha-tecnica{
+	margin-left: 10px;
+	border:1px solid green;
+	width: 400px;
+	height: 400px;
+}
 
+.titulo-pagina{
+	margin-bottom: 20px;
+	width: 97%;
+	text-align:center;
+	
+}
+
+.ficha-tecnica{
+	float: right;
+	display: inline;
+	margin-right: 10px;
+	margin-bottom: 50px;
+	padding-right: 0;
+	line-height: 30px;
+	width: 580px;
+	border:1px solid green;
+}
+
+#vermelho{
+	border:1px solid red;
+}
+
+#azul{
+	border:1px solid blue;
+}
+
+#align-left{
+	float: right;
+	font-size: 0.9em;
+	text-align: right;
+	padding-left: 160px;
+	
+}
+ .titulo-anuncio{
+ 	border: 1px solid red;
+ 	text-align: right;
+ 	padding: 5px;
+ 	margin-bottom: 20px;
+ }
+
+ #proposta{
+ 	display: block;
+ 	width: 580px;
+ 	text-align: center;
+ 	margin-top: 30px;
+ 	border:1px solid blue;
+ 	
+ }
+
+ .botaowhats{
+ 	width: 336px;
+ 	height: 80px;
+ 	line-height: 0px;
+ 	padding: 0px;
+ 	margin-top:30px;
+ 	margin-bottom: 30px;
+ 	background:url(logo4-whatsapp.png)no-repeat;	
+ }
+
+ .botaoface{
+ 	width: 336px;
+ 	height: 80px;
+ 	margin-top: 30px;
+ 	margin-bottom: 30px;
+ 	background: url(botao-face2.png)no-repeat;
+ }
