--- a/estilo.css
+++ b/estilo.css
@@ -40,7 +40,7 @@ body{
 	width: 1035px;
 	height: 890px;
 	float: right;
-	border:3px solid green;
+	/*border:3px solid green;*/
 	
 	
 
@@ -51,7 +51,7 @@ body{
 	height:893px;
 	margin-left: 0px;
 	background:#f7b600;
-	border:1px solid red;
+	/*border:1px solid red;*/
 }
 	
 .postagem{	
@@ -60,7 +60,7 @@ body{
 	width: 500px;
 	height:275px;
 	display: inline;
-	border:3px solid green ;
+	/*border:3px solid green ;*/
 }
 
 		
@@ -195,12 +195,11 @@ h4{
 	margin-top: 0px;
 	padding-top: 0px;
 	margin-left: 20px;
-	border:1px solid gray;
-
+	/*border:1px solid gray;*/
 }
 .data-postagem{
 	font-size:0.7em;
-	border-bottom: 1px solid;	
+	/*border-bottom: 1px solid;	*/
 	padding-bottom: 5px;
 	margin-bottom: 5px;
 	display: block;
@@ -215,10 +214,12 @@ h4{
 .botao{
 	margin-left:5px;
 	font-style: bold;
-	
-	color:black	;
 	background:#f7b600;
-	display:inline-block;
+	display:inline;
+}
+
+.botao a{
+	color:black;
 }
 .formato-foto{
 	margin-left: 5px;
@@ -233,7 +234,7 @@ h4{
 
 .imagem-ficha-tecnica{
 	margin-left: 10px;
-	border:1px solid green;
+	/*border:1px solid green;*/
 	width: 400px;
 	height: 400px;
 }
@@ -253,15 +254,15 @@ h4{
 	padding-right: 0;
 	line-height: 30px;
 	width: 580px;
-	border:1px solid green;
+	/*border:1px solid green;*/
 }
 
 #vermelho{
-	border:1px solid red;
+	/*border:1px solid red;*/
 }
 
 #azul{
-	border:1px solid blue;
+	/*border:1px solid blue;*/
 }
 
 #align-left{
@@ -272,7 +273,7 @@ h4{
 	
 }
  .titulo-anuncio{
- 	border: 1px solid red;
+ 	/*border: 1px solid red;*/
  	text-align: right;
  	padding: 5px;
  	margin-bottom: 20px;
@@ -283,7 +284,7 @@ h4{
  	width: 580px;
  	text-align: center;
  	margin-top: 30px;
- 	border:1px solid blue;
+ 	/*border:1px solid blue;*/
  	
  }
 
@@ -294,7 +295,7 @@ h4{
  	padding: 0px;
  	margin-top:30px;
  	margin-bottom: 30px;
- 	background:url(logo4-whatsapp.png)no-repeat;	
+ 	background:url(../carros/logo4-whatsapp.png)no-repeat;	
  }
 
  .botaoface{
@@ -302,5 +303,5 @@ h4{
  	height: 80px;
  	margin-top: 30px;
  	margin-bottom: 30px;
- 	background: url(botao-face2.png)no-repeat;
+ 	background: url(../carros/botao-face2.png)no-repeat;
  }
